--- a/render.yaml
+++ b/render.yaml
@@ -7,5 +7,9 @@ services:
     envVars:
       - key: MONGODB_URI
         sync: false
-      - key: PORT
-        value: 10000 
+      - key: JWT_SECRET
+        sync: false
+      - key: NODE_ENV
+        value: production
+    plan: free
+    healthCheckPath: /api/health 
